--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next-auth": "^4.24.5",
+    "axios": "^1.6.2",
+    "formidable": "^3.5.0",
     "mongoose": "^7.6.1",
-    "axios": "^1.6.2"
+    "next": "14.0.0",
+    "next-auth": "^4.24.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
