--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-chat-app",
+  "name": "ai-chat-full",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "formidable": "^3.5.0",
-    "mongoose": "^7.6.1",
     "next": "14.0.0",
-    "next-auth": "^4.24.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "axios": "^1.6.2",
+    "formidable": "^3.6.0",
+    "mongoose": "^7.6.1"
   }
 }
