--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "axios": "^1.6.2",
-    "formidable": "^3.6.0",
-    "mongoose": "^7.6.1"
+    "formidable": "^3.0.0",
+    "mongoose": "^7.6.1",
+    "next": "^14.2.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
