--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formidable": "^3.5.3",
     "mongoose": "^7.6.1",
     "next": "^14.2.32",
+    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
